# example

./: CONTRIBUTING.md  README.md
trusted_application_demo/aes_custom_interface/: CMakeLists.txt  package.xml
trusted_application_demo/aes_custom_interface/msg/: AesMessageCertify.msg
trusted_application_demo/aes_custom_interface/srv/: GetSymmSecret.srv
trusted_application_demo/ca_security_api/: CMakeLists.txt  package.xml
trusted_application_demo/ca_security_api/include/: aes_api.h  hmac_api.h  rsa_api.h  teec_utils.h
trusted_application_demo/ca_security_api/include/ca_security_api/: aes_api.h  hmac_api.h  rsa_api.h  teec_utils.h
trusted_application_demo/ca_security_api/src/: aes_api.c  hmac_api.c  rsa_api.c  teec_utils.c
trusted_application_demo/client_application/aes_certify_messaging/publisher/: CMakeLists.txt  aes_publisher.cpp  package.xml
trusted_application_demo/client_application/aes_certify_messaging/subscriber/: CMakeLists.txt  aes_subscriber.cpp  package.xml
trusted_application_demo/optee_ta_security/: CMakeLists.txt  package.xml
trusted_application_demo/optee_ta_security/include/: ta_public.h
trusted_application_demo/optee_ta_security/src/: Makefile  ta_aes.c  ta_aes.h  ta_mainpoint.c  ta_rsa.c  ta_rsa.h  ta_rsa_keys.h  ta_sha.c  ta_sha.h  ta_utils.c  ta_utils.h  user_ta_header_defines.h
trusted_application_demo/ta_security_api/: CMakeLists.txt  package.xml
trusted_application_demo/ta_security_api/include/: ta_public.h
trusted_application_demo/ta_security_api/include/ta_security_api/: ta_aes.h  ta_public.h  ta_rsa.h  ta_rsa_keys.h  ta_sha.h  ta_utils.h
trusted_application_demo/ta_security_api/src/: Makefile  sub.mk  ta_aes.c  ta_aes.h  ta_mainpoint.c  ta_rsa.c  ta_rsa.h  ta_rsa_keys.h  ta_sha.c  ta_sha.h  ta_utils.c  ta_utils.h  user_ta_header_defines.h
