<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ca_security_api</name>
  <version>0.0.1</version>
  <description>Library to interface Trusted world encryption functions</description>
  <maintainer email="florian.depraz@arm.com">Florian Depraz</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>optee_ta_security</build_depend>

  <exec_depend>optee_ta_security</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

