<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>aes_subscriber_certify</name>
  <version>0.0.1</version>
  <maintainer email="florian.depraz@arm.com">Florian Depraz</maintainer>
  <description>Client Application subscribing to AES encrypted messages</description>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>aes_custom_interface</depend>
  <depend>ca_security_api</depend>
  <depend>ta_security_api</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
